package pl.kansas.go.infrastructure.network;

import java.io.Serializable;

public interface Message extends Serializable {
}
